DEV-0 update composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "census-cms/cms",
+	"name": "census-cms/census",
 	"description": "census CMS source",
 	"license": "GPL-2.0+",
 	"authors": [
