--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	],
 	"type": "package",
 	"require": {
-		"twig/twig": "^2.11"
+		"twig/twig": "^2.11",
+		"symfony/yaml": "4.4.x-dev"
 	},
 	"require-dev": {
 	},
